README and patchlevel.h for krb5-1.10-alpha1
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-10@25400 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -223,6 +223,7 @@ krb5-1.10 changes by ticket ID
 6981    SA-2011-006 KDC denial of service [CVE-2011-1527 CVE-2011-1528 CVE-2011-1529]
 6987    Fix krb5_cc_set_config
 6988    Fix handling of null edata method in KDC preauth
+6989    fix tar invocation in mkrel
 
 Acknowledgements
 ----------------
