README and patchlevel.h for krb5-1.9.2
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-9@25427 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -398,6 +398,7 @@ reports, suggestions, and valuable resources:
     Russell Allbery
     Brian Almeida
     Michael B Allen
+    Heinz-Ado Arnolds
     Derek Atkins
     David Bantz
     Alex Baule
@@ -418,12 +419,14 @@ reports, suggestions, and valuable resources:
     Sylvain Cortes
     Nalin Dahyabhai
     Dennis Davis
+    Mark Deneen
     Roland Dowdeswell
     Jason Edgecombe
     Mark Eichin
     Shawn M. Emery
     Douglas E. Engert
     Peter Eriksson
+    Juha Erkkilä
     Ronni Feldt
     Bill Fellows
     JC Ferguson
@@ -454,20 +457,24 @@ reports, suggestions, and valuable resources:
     Kevin Longfellow
     Ryan Lynch
     Nathaniel McCallum
+    Greg McClement
     Cameron Meadors
     Franklyn Mendez
     Markus Moeller
+    Kyle Moffett
     Paul Moore
     Keiichi Mori
     Zbysek Mraz
     Edward Murrell
     Nikos Nikoleris
     Felipe Ortega
+    Andrej Ota
     Dmitri Pal
     Javier Palacios
     Ezra Peisach
     W. Michael Petullo
     Mark Phalan
+    Jonathan Reams
     Robert Relyea
     Martin Rex
     Jason Rogers
