--- a/README
+++ b/README
@@ -317,6 +317,7 @@ reports, suggestions, and valuable resources:
     Russell Allbery
     Brian Almeida
     Michael B Allen
+    Heinz-Ado Arnolds
     Derek Atkins
     David Bantz
     Alex Baule
@@ -325,6 +326,7 @@ reports, suggestions, and valuable resources:
     Radoslav Bodo
     Emmanuel Bouillon
     Michael Calmer
+    Julien Chaffraix
     Ravi Channavajhala
     Srinivas Cheruku
     Leonardo Chiquitto
@@ -335,12 +337,15 @@ reports, suggestions, and valuable resources:
     Simon Cooper
     Sylvain Cortes
     Nalin Dahyabhai
+    Dennis Davis
+    Mark Deneen
     Roland Dowdeswell
     Jason Edgecombe
     Mark Eichin
     Shawn M. Emery
     Douglas E. Engert
     Peter Eriksson
+    Juha Erkkilä
     Ronni Feldt
     Bill Fellows
     JC Ferguson
@@ -368,19 +373,27 @@ reports, suggestions, and valuable resources:
     Mikkel Kruse
     Volker Lendecke
     Jan iankko Lieskovsky
+    Kevin Longfellow
     Ryan Lynch
+    Nathaniel McCallum
+    Greg McClement
+    Cameron Meadors
     Franklyn Mendez
     Markus Moeller
+    Kyle Moffett
     Paul Moore
+    Keiichi Mori
     Zbysek Mraz
     Edward Murrell
-    Nathaniel McCallum
     Nikos Nikoleris
+    Felipe Ortega
+    Andrej Ota
     Dmitri Pal
     Javier Palacios
     Ezra Peisach
     W. Michael Petullo
     Mark Phalan
+    Jonathan Reams
     Robert Relyea
     Martin Rex
     Jason Rogers
@@ -389,6 +402,7 @@ reports, suggestions, and valuable resources:
     Tom Shaw
     Peter Shoults
     Simo Sorce
+    Michael Spang
     Michael Ströder
     Bjørn Tore Sund
     Rathor Vipin
