ticket: 7092 status: resolved
Adam Bernstein reported this bug and helped with analysis.

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-10@25752 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -372,6 +372,7 @@ reports, suggestions, and valuable resources:
     Mark Bannister
     David Bantz
     Alex Baule
+    Adam Bernstein
     Arlene Berry
     Jeff Blaine
     Radoslav Bodo
