ticket: 7098 status: resolved
Mark Davies reported the password expiry message bug.

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-10@25753 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -389,6 +389,7 @@ reports, suggestions, and valuable resources:
     Simon Cooper
     Sylvain Cortes
     Nalin Dahyabhai
+    Mark Davies
     Dennis Davis
     Mark Deneen
     Roland Dowdeswell
