ticket: 7087 status: resolved
Ian Abbott reported the bug where krb5_gss_get_name_attribute fails to
set display_value.

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-10@25754 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -363,6 +363,7 @@ Past and present members of the Kerberos Team at MIT:
 The following external contributors have provided code, patches, bug
 reports, suggestions, and valuable resources:
 
+    Ian Abbott
     Brandon Allbery
     Russell Allbery
     Brian Almeida
