--- a/src/man/kprop.man
+++ b/src/man/kprop.man
@@ -1,4 +1,4 @@
-.TH "KPROP" "8" "January 06, 2012" "0.0.1" "MIT Kerberos"
+.TH "KPROP" "8" " " "0.0.1" "MIT Kerberos"
 .SH NAME
 kprop \- propagate a Kerberos V5 principal database to a slave server
 .
@@ -31,27 +31,21 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" Man page generated from reStructeredText.
 .
 .SH SYNOPSIS
-.INDENT 0.0
-.TP
-.B \fBkprop\fP
 .sp
+\fBkprop\fP
 [\fB\-r\fP \fIrealm\fP]
 [\fB\-f\fP \fIfile\fP]
 [\fB\-d\fP]
 [\fB\-P\fP \fIport\fP]
 [\fB\-s\fP \fIkeytab\fP]
 \fIslave_host\fP
-.UNINDENT
 .SH DESCRIPTION
 .sp
-\fIkprop\fP  is used to propagate a Kerberos V5 database dump file from the master
-Kerberos server to a slave Kerberos server, which is specified by \fIslave_host\fP.
-This is done by transmitting the dumped database file to the slave server over
-an encrypted, secure channel.
-The dump file must be created by \fIkdb5_util(8)\fP.
+kprop is used to securely propagate a Kerberos V5 database dump file
+from the master Kerberos server to a slave Kerberos server, which is
+specified by \fIslave_host\fP.  The dump file must be created by
+\fIkdb5_util(8)\fP.
 .SH OPTIONS
-.INDENT 0.0
-.INDENT 3.5
 .INDENT 0.0
 .TP
 .B \fB\-r\fP \fIrealm\fP
@@ -60,13 +54,14 @@ Specifies the realm of the master server.
 .TP
 .B \fB\-f\fP \fIfile\fP
 .sp
-Specifies the filename where the dumped principal database file is to be found;
-by default the dumped database file is normally
-\fI/usr/local/var/krb5kdc/slave_datatrans\fP.
+Specifies the filename where the dumped principal database file is
+to be found; by default the dumped database file is normally
+\fB@LOCALSTATEDIR@/krb5kdc\fP\fB/slave_datatrans\fP.
 .TP
 .B \fB\-P\fP \fIport\fP
 .sp
-Specifies the port to use to contact the \fIkpropd(8)\fP server on the remote host.
+Specifies the port to use to contact the \fIkpropd(8)\fP server
+on the remote host.
 .TP
 .B \fB\-d\fP
 .sp
@@ -76,23 +71,17 @@ Prints debugging information.
 .sp
 Specifies the location of the keytab file.
 .UNINDENT
-.UNINDENT
-.UNINDENT
 .SH ENVIRONMENT
 .sp
 \fIkprop\fP uses the following environment variable:
-.INDENT 0.0
-.INDENT 3.5
 .INDENT 0.0
 .IP \(bu 2
 .
 \fBKRB5_CONFIG\fP
 .UNINDENT
-.UNINDENT
-.UNINDENT
 .SH SEE ALSO
 .sp
-kpropd(8), kdb5_util(8), krb5kdc(8)
+\fIkpropd(8)\fP, \fIkdb5_util(8)\fP, \fIkrb5kdc(8)\fP
 .SH AUTHOR
 MIT
 .SH COPYRIGHT
