--- a/src/man/ktutil.man
+++ b/src/man/ktutil.man
@@ -1,4 +1,4 @@
-.TH "KTUTIL" "1" "January 06, 2012" "0.0.1" "MIT Kerberos"
+.TH "KTUTIL" "1" " " "0.0.1" "MIT Kerberos"
 .SH NAME
 ktutil \- Kerberos keytab file maintenance utility
 .
@@ -35,94 +35,142 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 \fBktutil\fP
 .SH DESCRIPTION
 .sp
-The \fIktutil\fP command invokes a subshell from which an administrator can read, write, or edit entries in a Kerberos V5 keytab or V4 srvtab file.
+The ktutil command invokes a command interface from which an
+administrator can read, write, or edit entries in a keytab or Kerberos
+V4 srvtab file.
 .SH COMMANDS
+.SS list
 .INDENT 0.0
 .INDENT 3.5
-.INDENT 0.0
-.TP
-.B \fBlist\fP
+.sp
+\fBlist\fP
+.UNINDENT
+.UNINDENT
 .sp
 Displays the current keylist.
 .sp
 Alias: \fBl\fP
-.TP
-.B \fBread_kt\fP \fIkeytab\fP
+.SS read_kt
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBread_kt\fP \fIkeytab\fP
+.UNINDENT
+.UNINDENT
 .sp
 Read the Kerberos V5 keytab file \fIkeytab\fP into the current keylist.
 .sp
 Alias: \fBrkt\fP
-.TP
-.B \fBread_st\fP \fIsrvtab\fP
+.SS read_st
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBread_st\fP \fIsrvtab\fP
+.UNINDENT
+.UNINDENT
 .sp
 Read the Kerberos V4 srvtab file \fIsrvtab\fP into the current keylist.
 .sp
 Alias: \fBrst\fP
-.TP
-.B \fBwrite_kt\fP \fIkeytab\fP
+.SS write_kt
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBwrite_kt\fP \fIkeytab\fP
+.UNINDENT
+.UNINDENT
 .sp
 Write the current keylist into the Kerberos V5 keytab file \fIkeytab\fP.
 .sp
 Alias: \fBwkt\fP
-.TP
-.B \fBwrite_st\fP \fIsrvtab\fP
+.SS write_st
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBwrite_st\fP \fIsrvtab\fP
+.UNINDENT
+.UNINDENT
 .sp
 Write the current keylist into the Kerberos V4 srvtab file \fIsrvtab\fP.
 .sp
 Alias: \fBwst\fP
-.TP
-.B \fBclear_list\fP
+.SS clear_list
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBclear_list\fP
+.UNINDENT
+.UNINDENT
 .sp
 Clear the current keylist.
 .sp
 Alias: \fBclear\fP
-.TP
-.B \fBdelete_entry\fP \fIslot\fP
+.SS delete_entry
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBdelete_entry\fP \fIslot\fP
+.UNINDENT
+.UNINDENT
 .sp
 Delete the entry in slot number \fIslot\fP from the current keylist.
 .sp
-Alias: \fIdelent\fP
-.TP
-.B \fBadd_entry\fP (\fB\-key | \-password)\fP \fB\-p\fP \fIprincipal\fP \fB\-k\fP \fIkvno\fP \fB\-e\fP \fIenctype\fP
+Alias: \fBdelent\fP
+.SS add_entry
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBadd_entry\fP {\fB\-key\fP|\fB\-password\fP} \fB\-p\fP \fIprincipal\fP
+\fB\-k\fP \fIkvno\fP \fB\-e\fP \fIenctype\fP
+.UNINDENT
+.UNINDENT
 .sp
 Add \fIprincipal\fP to keylist using key or password.
 .sp
 Alias: \fBaddent\fP
-.TP
-.B \fBlist_requests\fP
+.SS list_requests
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBlist_requests\fP
+.UNINDENT
+.UNINDENT
 .sp
 Displays a listing of available commands.
 .sp
 Aliases: \fBlr\fP, \fB?\fP
-.TP
-.B \fBquit\fP
+.SS quit
+.INDENT 0.0
+.INDENT 3.5
+.sp
+\fBquit\fP
+.UNINDENT
+.UNINDENT
 .sp
 Quits ktutil.
 .sp
 Aliases: \fBexit\fP, \fBq\fP
-.UNINDENT
-.UNINDENT
-.UNINDENT
-.sp
-EXAMPLE:
+.SH EXAMPLE
+.INDENT 0.0
+.INDENT 3.5
 .sp
 .nf
 .ft C
-ktutil:  add_entry \-password \-p alice@BLEEP.COM \-k 1 \-e aes128\-cts\-hmac\-sha1\-96
+ktutil:  add_entry \-password \-p alice@BLEEP.COM \-k 1 \-e
+    aes128\-cts\-hmac\-sha1\-96
 Password for alice@BLEEP.COM:
-ktutil:  add_entry \-password \-p alice@BLEEP.COM \-k 1 \-e aes256\-cts\-hmac\-sha1\-96
+ktutil:  add_entry \-password \-p alice@BLEEP.COM \-k 1 \-e
+    aes256\-cts\-hmac\-sha1\-96
 Password for alice@BLEEP.COM:
 ktutil:  write_kt keytab
 ktutil:
 .ft P
 .fi
+.UNINDENT
+.UNINDENT
 .SH SEE ALSO
-.INDENT 0.0
-.INDENT 3.5
 .sp
-kadmin(8), kdb5_util(8)
-.UNINDENT
-.UNINDENT
+\fIkadmin(1)\fP, \fIkdb5_util(8)\fP
 .SH AUTHOR
 MIT
 .SH COPYRIGHT
