--- a/src/man/kprop.man
+++ b/src/man/kprop.man
@@ -56,7 +56,7 @@ Specifies the realm of the master server.
 .sp
 Specifies the filename where the dumped principal database file is
 to be found; by default the dumped database file is normally
-\fB@LOCALSTATEDIR@/krb5kdc\fP\fB/slave_datatrans\fP.
+\fB@LOCALSTATEDIR@\fP\fB/krb5kdc\fP\fB/slave_datatrans\fP.
 .TP
 .B \fB\-P\fP \fIport\fP
 .sp
